# example-nicegui-app

./: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml  setup.py  tauri.bundle.json  tauri.conf.json
.github/workflows/: release-standalone.yml
capabilities/: default.json
python/nicegui_app/: __init__.py  __main__.py
scripts/: README.md
scripts/linux/: build.sh  download-py.sh
scripts/macos/: build.sh  download-py.sh
scripts/windows/: build.ps1  download-py.ps1
src/: lib.rs  main.rs
