[package]
name = "nicegui-app"
version = "0.1.0"
description = "A example for how to use nicegui with pytauri."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nicegui_app_lib"
# `cdylib` is required for building python extension modules files
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
# the same as the package name
name = "nicegui-app"
path = "src/main.rs"
required-features = ["pytauri/standalone"]


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

pyo3 = { version = "0.25" }
pytauri = { version = "0.8", features = [
    "plugin-opener",
    "plugin-notification",
] }
tauri-plugin-pytauri = { version = "0.8" }


[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.

[profile.bundle-dev]
inherits = "dev"

[profile.bundle-release]
inherits = "release"
