[project]
name = "nicegui-app"
version = "0.1.0"
description = "A example for how to use nicegui with pytauri."
requires-python = ">=3.9"
dependencies = [
    "nicegui >= 2.9.1, < 3",
    "fastapi >= 0.115.6",
    "uvicorn >= 0.34",
    "anyio == 4.*",
    "typing-extensions >= 4",
    "pytauri == 0.2.*",
    "pytauri-plugin-notification == 0.2.*",
]

[dependency-groups]
dev = [{ include-group = "build-system" }]
# keep the same as `[build-system.requires]`
build-system = ["setuptools>=61", "setuptools-rust==1.*", "setuptools_scm>=8"]


[project.entry-points.pytauri]
# - "nicegui_app" -> `python/nicegui_app/`
# - "ext_mod" -> `#[pyo3(name = "ext_mod")]` in rust
ext_mod = "nicegui_app.ext_mod"

[build-system]
requires = ["setuptools>=61", "setuptools-rust==1.*", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { where = ["python"] }

# see: <https://www.maturin.rs/config>
[tool.maturin]
# the same as [tool.setuptools.packages.find.where]
python-source = "python"
# the same as `[project.entry-points.pytauri.ext_mod]`,
# i.e., `target` in `setup.py`
module-name = "nicegui_app.ext_mod"
# see `setup.py`
features = ["pyo3/extension-module", "tauri/custom-protocol", "pyo3/abi3-py39"]
# equivalent to `setuptools_scm`
sdist-generator = "git"


[tool.uv.sources.pytauri]
git = "https://github.com/WSH032/pytauri"
subdirectory = "python/pytauri"
branch = "temp/org-example"

[tool.uv.sources.pytauri-plugin-notification]
git = "https://github.com/WSH032/pytauri"
subdirectory = "python/pytauri-plugin-notification"
branch = "temp/org-example"


[tool.pyright]
# see: <https://github.com/microsoft/pyright/blob/1.1.391/docs/configuration.md#environment-options>
exclude = [
    "**/node_modules",
    "**/__pycache__",
    # 👇 necessary, because when `tauri-cli bundles python,
    # it will copy `pyembed` to the target directory (i.e., rust output dir).
    "**/target",
    # 👆
    "**/dist",
    "**/.venv",
    "**/.*",
    "src-tauri/pyembed/",
    "src-tauri/frontend/",
]
